[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
rayon = "1.2.1"
vob = "2.0.6"

[dependencies.m4ri-rust]
version = "0.4.0"
features = ["serde"]
git = "https://github.com/ArianK16a/m4ri-rust.git"
branch = "main"

[dependencies.m4ri-sys]
version = "0.3.3"
git = "https://github.com/ArianK16a/m4ri-rust.git"
branch = "main"